--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,7 @@ jobs:
           echo "MX Version=$MX_VERSION"
           make version=$MX_VERSION build
           MX_TOOLS_CONTAINER=$(mendixlabs/mx-docker-tools:$MX_VERSION)
-          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app MX_TOOLS_CONTAINER mxutil.exe create-module-package --package-dir /opt/app/../Releases/ /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
+          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app MX_TOOLS_CONTAINER mxutil.exe create-module-package --package-dir /opt/app/ /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
 
       - name: Collect docker logs
         id: collectLogs
