--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,9 @@ name: Mendix WorkflowCommons
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ test-workflow ]
+    branches: [ main ]
   pull_request:
-    branches: [ test-workflow ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -82,6 +82,7 @@ jobs:
           make version=$MX_VERSION build
 
       - name: Run MX Util
+        run: |
           MX_TOOLS_CONTAINER=$(mendixlabs/mx-docker-tools:$MX_VERSION)
           echo "TESTSTST: $MX_TOOLS_CONTAINER"
           # docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app MX_TOOLS_CONTAINER mxutil.exe create-module-package --package-dir /opt/app/ /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
