--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+   MX_VERSION: 0.0.0.0
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -35,6 +38,12 @@ jobs:
         with:
           repository: 'dimas9009/mx-docker-tools'
           path: 'mx-tools'
+
+      - name: Define MX_VERSION
+        run: |
+          cd $GITHUB_WORKSPACE/app/Source
+          ${MX_VERSION}=$(sqlite3 ExpenseRequestStarterApp.mpr 'SELECT _ProductVersion FROM _MetaData LIMIT 1')
+          
 
       - name: Create build directory
         run: mkdir build-pack/build
@@ -83,6 +92,7 @@ jobs:
 
       - name: Run MX Util
         run: |
+          MX_VERSION=$(sqlite3 ExpenseRequestStarterApp.mpr 'SELECT _ProductVersion FROM _MetaData LIMIT 1')
           MX_TOOLS_CONTAINER=$(mendixlabs/mx-docker-tools:$MX_VERSION)
           echo "TESTSTST: $MX_TOOLS_CONTAINER"
           # docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app MX_TOOLS_CONTAINER mxutil.exe create-module-package --package-dir /opt/app/ /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
