--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,8 @@ jobs:
       - name: Build MX Util
         run: |
           cd app/Source
+          echo "TEST"
+          echo $MX_VERSION
           make version=$MX_VERSION build
 
       - name: Run MX Util
