--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,14 @@ jobs:
       - name: Test
         run: echo ${{ env.MX_VERSION }}
 
+        - name: Set the value
+          run: |
+            echo "action_state=yellow" >> $GITHUB_ENV
+        
+        - name: Use the value
+          run: |
+            echo "${{ env.action_state }}" # This will output 'yellow'
+
       - name: Create build directory
         run: mkdir build-pack/build
       
