--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Run MX Util
         run: |
           docker images -a
-          MX_TOOLS_CONTAINER=$(mendixlabs/mx-docker-tools:${{env.MX_VERSION}})
-          docker run -mendixlabs/mx-docker-tools:${{env.MX_VERSION}} mxutil.exe
+          MX_TOOLS_CONTAINER="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
+          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i MX_TOOLS_CONTAINER mxutil.exe create-module-package --package-dir /opt/app/ /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
 
       - name: Create build directory
         run: mkdir build-pack/build
