--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: 'dimas9009/mx-docker-tools'
+          repository: 'mendixlabs/mx-docker-tools'
           path: 'mx-tools'
 
       - name: Define MX_VERSION
@@ -42,28 +42,6 @@ jobs:
           VERSION=$(sqlite3 ExpenseRequestStarterApp.mpr 'SELECT _ProductVersion FROM _MetaData LIMIT 1')
           echo "Detected MX Version:$VERSION"
           echo "MX_VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Build MX Util
-        run: |
-          cd $GITHUB_WORKSPACE/mx-tools
-          docker build ./src --build-arg MX_VERSION=${{env.MX_VERSION}} -t mendixlabs/mx-docker-tools:${{env.MX_VERSION}}
-
-      - name: Run MX Util
-        run: |
-          MX_TOOLS_IMAGE="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
-          mkdir $GITHUB_WORKSPACE/app/Source/packages
-          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
-          cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommon-Latest.mpk
-          rm -rf $GITHUB_WORKSPACE/app/Source/packages
-
-      - name: Commit release
-        run: |
-            cd $GITHUB_WORKSPACE/app/Releases
-            git config --global user.name 'Github Workflow'
-            git config --global user.email 'noreply@github.com'
-            git add WorkflowCommon-Latest.mpk
-            git commit -am "Autorelease WorkflowCommon"
-            git push
 
       - name: Create build directory
         run: mkdir build-pack/build
@@ -105,6 +83,29 @@ jobs:
             echo “Failed to execute tests”
             exit 1
           fi
+
+      - name: Build MX Util
+        run: |
+          cd $GITHUB_WORKSPACE/mx-tools
+          # In future Will use make file to build
+          docker build ./src --build-arg MX_VERSION=${{env.MX_VERSION}} -t mendixlabs/mx-docker-tools:${{env.MX_VERSION}}
+
+      - name: Run MX Util
+        run: |
+          MX_TOOLS_IMAGE="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
+          mkdir $GITHUB_WORKSPACE/app/Source/packages
+          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
+          cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommon-Latest.mpk
+          rm -rf $GITHUB_WORKSPACE/app/Source/packages
+
+      - name: Commit release
+        run: |
+            cd $GITHUB_WORKSPACE/app/Releases
+            git config --global user.name 'Github Workflow'
+            git config --global user.email 'noreply@github.com'
+            git add WorkflowCommon-Latest.mpk
+            git commit -am "Auto release WorkflowCommon"
+            git push
 
       - name: Collect docker logs
         id: collectLogs
