--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,9 +57,6 @@ jobs:
           cd build-pack
           make build-image
 
-      - name: Test containers
-        run: docker container ls --all
-
       - name: Run docker image
         run: |
           cd build-pack
@@ -94,11 +91,12 @@ jobs:
         run: |
           MX_TOOLS_IMAGE="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
           mkdir $GITHUB_WORKSPACE/app/Source/packages
-          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons"
-          cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommon-Latest.mpk
+          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons" | tee $GITHUB_WORKSPACE/out/mxtool.log
+          cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk
           rm -rf $GITHUB_WORKSPACE/app/Source/packages
 
       - name: Commit release
+        if: github.event_name != 'pull_request'
         run: |
             cd $GITHUB_WORKSPACE/app/Releases
             git config --global user.name 'Github Workflow'
