--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
             git config --global user.name 'Github Workflow'
             git config --global user.email 'noreply@github.com'
             git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-            git add WorkflowCommon-Latest.mpk
+            git add WorkflowCommons-Latest.mpk
             git commit -am "Auto release WorkflowCommon"
             git push
 
