--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: 'dimas9009/docker-mendix-buildpack'
+          ref: 'test-postgres'
           path: 'build-pack'
 
       - uses: actions/checkout@v2
