--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
               if ! grep -q "$i" $ALLOWED_LIST; then
                 echo "Deleting widget: $i" | tee -a $GITHUB_WORKSPACE/out/deletedWidgets.log
                 rm "$i"
-                sed '/$i/d' $TEMP_UNZIP_FOLDER/package.xml
+                sed -i "/$i/d" $TEMP_UNZIP_FOLDER/package.xml
               fi
             done
             
