--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,107 +43,111 @@ jobs:
           echo "Detected MX Version:$VERSION"
           echo "MX_VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Create build directory
-        run: mkdir build-pack/build
+      # - name: Create build directory
+      #   run: mkdir build-pack/build
       
-      - name: Create output directory
-        run: mkdir $GITHUB_WORKSPACE/out
+      # - name: Create output directory
+      #   run: mkdir $GITHUB_WORKSPACE/out
 
-      - name: Copy application files to build directory
-        run: cp -v -r app/Source/. build-pack/build
+      # - name: Copy application files to build directory
+      #   run: cp -v -r app/Source/. build-pack/build
 
-      - name: Build docker image
+      - name: Check Release notes
         run: |
-          cd build-pack
-          make build-image
+          echo "TEST!!!!"
 
-      - name: Run docker image
-        run: |
-          cd build-pack
-          make run-container &
-          timeout 60s bash -c 'until curl -s http://localhost:8080 | grep "<title>Mendix</title>"; do sleep 5; done'
+      # - name: Build docker image
+      #   run: |
+      #     cd build-pack
+      #     make build-image
 
-      - name: Start unit tests
-        run: |
-          timeout 60s bash -c 'until curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/rest/wfcunittest/v1/wfcunittests/start | grep "204"; do sleep 5; done'
+      # - name: Run docker image
+      #   run: |
+      #     cd build-pack
+      #     make run-container &
+      #     timeout 60s bash -c 'until curl -s http://localhost:8080 | grep "<title>Mendix</title>"; do sleep 5; done'
 
-      - name: Check status of unit tests
-        run: |
-          timeout 120s \
-            bash -c \
-               'until \
-                  curl -s -H "Accept: application/json" -o $GITHUB_WORKSPACE/out/test_results.json -w "%{http_code}" http://localhost:8080/rest/wfcunittest/v1/wfcunittests/status | grep "200" && \
-                  cat $GITHUB_WORKSPACE/out/test_results.json | jq ".Result" | grep "_3_Success"; \
-                do sleep 5; done' \
-            || true
-          if ! cat $GITHUB_WORKSPACE/out/test_results.json | jq ".Result" | grep "_3_Success" ; then
-            echo “Failed to execute tests”
-            exit 1
-          fi
+      # - name: Start unit tests
+      #   run: |
+      #     timeout 60s bash -c 'until curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/rest/wfcunittest/v1/wfcunittests/start | grep "204"; do sleep 5; done'
 
-      - name: Build MX Util
-        run: |
-          cd $GITHUB_WORKSPACE/mx-tools
-          make version=${{env.MX_VERSION}} build
+      # - name: Check status of unit tests
+      #   run: |
+      #     timeout 120s \
+      #       bash -c \
+      #          'until \
+      #             curl -s -H "Accept: application/json" -o $GITHUB_WORKSPACE/out/test_results.json -w "%{http_code}" http://localhost:8080/rest/wfcunittest/v1/wfcunittests/status | grep "200" && \
+      #             cat $GITHUB_WORKSPACE/out/test_results.json | jq ".Result" | grep "_3_Success"; \
+      #           do sleep 5; done' \
+      #       || true
+      #     if ! cat $GITHUB_WORKSPACE/out/test_results.json | jq ".Result" | grep "_3_Success" ; then
+      #       echo “Failed to execute tests”
+      #       exit 1
+      #     fi
 
-      - name: Run MX Util
-        run: |
-          MX_TOOLS_IMAGE="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
-          mkdir $GITHUB_WORKSPACE/app/Source/packages
-          docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons" --exclude-files="(resources|userlib)" | tee $GITHUB_WORKSPACE/out/mxutil.log
-          cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk
-          rm -rf $GITHUB_WORKSPACE/app/Source/packages
+      # - name: Build MX Util
+      #   run: |
+      #     cd $GITHUB_WORKSPACE/mx-tools
+      #     make version=${{env.MX_VERSION}} build
 
-      - name: Delete rudiment widgets
-        run: |
-            TEMP_UNZIP_FOLDER="$GITHUB_WORKSPACE/TempUnzip"
-            TARGET_MPK="$GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk"
-            ALLOWED_LIST="$GITHUB_WORKSPACE/app/.github/workflows/AllowedWidgetsList.txt"
+      # - name: Run MX Util
+      #   run: |
+      #     MX_TOOLS_IMAGE="mendixlabs/mx-docker-tools:"${{env.MX_VERSION}}
+      #     mkdir $GITHUB_WORKSPACE/app/Source/packages
+      #     docker run -v $GITHUB_WORKSPACE/app/Source:/opt/app -i $MX_TOOLS_IMAGE mxutil.exe create-module-package --package-dir /opt/app/packages /opt/app/ExpenseRequestStarterApp.mpr "WorkflowCommons" --exclude-files="(resources|userlib)" | tee $GITHUB_WORKSPACE/out/mxutil.log
+      #     cp -f $GITHUB_WORKSPACE/app/Source/packages/WorkflowCommons.mpk $GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk
+      #     rm -rf $GITHUB_WORKSPACE/app/Source/packages
 
-            if [! -f "$ALLOWED_LIST" ]; then 
-              echo “Unable to find file AllowedWidgetsList.txt”
-              exit 1; 
-            fi
+      # - name: Delete rudiment widgets
+      #   run: |
+      #       TEMP_UNZIP_FOLDER="$GITHUB_WORKSPACE/TempUnzip"
+      #       TARGET_MPK="$GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk"
+      #       ALLOWED_LIST="$GITHUB_WORKSPACE/app/.github/workflows/AllowedWidgetsList.txt"
 
-            if [ -d "$TEMP_UNZIP_FOLDER" ]; then rm -Rf $TEMP_UNZIP_FOLDER; fi
-            mkdir $TEMP_UNZIP_FOLDER
-            unzip -x $TARGET_MPK -d $TEMP_UNZIP_FOLDER
+      #       if [! -f "$ALLOWED_LIST" ]; then 
+      #         echo “Unable to find file AllowedWidgetsList.txt”
+      #         exit 1; 
+      #       fi
 
-            cd "$TEMP_UNZIP_FOLDER/widgets"
-            for i in *; do
-              if ! grep -q "$i" $ALLOWED_LIST; then
-                echo "Deleting widget: $i" | tee -a $GITHUB_WORKSPACE/out/deletedWidgets.log
-                rm "$i"
-                sed -i "/$i/d" $TEMP_UNZIP_FOLDER/package.xml
-              fi
-            done
+      #       if [ -d "$TEMP_UNZIP_FOLDER" ]; then rm -Rf $TEMP_UNZIP_FOLDER; fi
+      #       mkdir $TEMP_UNZIP_FOLDER
+      #       unzip -x $TARGET_MPK -d $TEMP_UNZIP_FOLDER
+
+      #       cd "$TEMP_UNZIP_FOLDER/widgets"
+      #       for i in *; do
+      #         if ! grep -q "$i" $ALLOWED_LIST; then
+      #           echo "Deleting widget: $i" | tee -a $GITHUB_WORKSPACE/out/deletedWidgets.log
+      #           rm "$i"
+      #           sed -i "/$i/d" $TEMP_UNZIP_FOLDER/package.xml
+      #         fi
+      #       done
             
-            cd $TEMP_UNZIP_FOLDER
-            zip -r WorkflowCommons-Latest.mpk *
+      #       cd $TEMP_UNZIP_FOLDER
+      #       zip -r WorkflowCommons-Latest.mpk *
 
-            mv -f WorkflowCommons-Latest.mpk $GITHUB_WORKSPACE/app/Releases/
+      #       mv -f WorkflowCommons-Latest.mpk $GITHUB_WORKSPACE/app/Releases/
 
-            if [ -d "$TEMP_UNZIP_FOLDER" ]; then rm -Rf $TEMP_UNZIP_FOLDER; fi
+      #       if [ -d "$TEMP_UNZIP_FOLDER" ]; then rm -Rf $TEMP_UNZIP_FOLDER; fi
 
-      - name: Commit release
-        if: github.event_name != 'pull_request'
-        run: |
-            cd $GITHUB_WORKSPACE/app/Releases
-            git config --global user.name 'Github Workflow'
-            git config --global user.email 'noreply@github.com'
-            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-            git add WorkflowCommons-Latest.mpk
-            git commit -am "Auto release WorkflowCommons"
-            git push
+      # - name: Commit release
+      #   if: github.event_name != 'pull_request'
+      #   run: |
+      #       cd $GITHUB_WORKSPACE/app/Releases
+      #       git config --global user.name 'Github Workflow'
+      #       git config --global user.email 'noreply@github.com'
+      #       git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+      #       git add WorkflowCommons-Latest.mpk
+      #       git commit -am "Auto release WorkflowCommons"
+      #       git push
 
-      - name: Collect docker logs
-        id: collectLogs
-        if: ${{ always() }}
-        run: docker ps -q | xargs -n 1 docker logs >> $GITHUB_WORKSPACE/out/docker.log
+      # - name: Collect docker logs
+      #   id: collectLogs
+      #   if: ${{ always() }}
+      #   run: docker ps -q | xargs -n 1 docker logs >> $GITHUB_WORKSPACE/out/docker.log
 
-      - name: Archive results
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: Results
-          path: ${{ github.workspace }}/out/*
+      # - name: Archive results
+      #   if: ${{ always() }}
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Results
+      #     path: ${{ github.workspace }}/out/*
