--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,10 @@ jobs:
 
       - name: Check Release notes
         run: |
-          echo "TEST!!!!"
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
+
 
       # - name: Build docker image
       #   run: |
