--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Check Release notes
         run: |
-          TAG = $(curl https://api.github.com/repos/dimas9009/WorkflowCommons/releases/latest -s | jq .name -r)
+          TAG = $(curl https://api.github.com/repos/dimas9009/WorkflowCommons/releases/latest -s | jq .tag_name -r)
           echo $TAG
           
 
