--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Check Release notes
         run: |
           TAG = $(curl https://api.github.com/repos/dimas9009/WorkflowCommons/releases/latest -s | jq .tag_name -r)
-          echo $TAG
+          echo "$TAG"
           
 
 
