--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,10 @@ jobs:
 
       - name: Check Release notes
         run: |
-          TAG=$(curl https://api.github.com/repos/dimas9009/WorkflowCommons/releases/latest -s | jq .tag_name -r)
-          echo "$TAG"
+          Organization="dimas9009"
+          Project="WorkflowCommons"
+          ReleaseTag=$(curl https://api.github.com/repos/$Organization/$Project/releases/latest -s | jq .tag_name -r)
+          echo "$ReleaseTag"
           
 
 
