--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,10 @@ jobs:
           Organization="dimas9009"
           Project="WorkflowCommons"
           ReleaseTag=$(curl https://api.github.com/repos/$Organization/$Project/releases/latest -s | jq .tag_name -r)
-          echo "$ReleaseTag"
+          echo "Detected release tag in github:$ReleaseTag"
+          cd $GITHUB_WORKSPACE/app
+          DeclaredRelease=$(sed -n 's/^## Release //p' ReleaseNotes.md | head -n 1)
+          echo "Declared release local file:$DeclaredRelease"
           
 
 
