--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,11 @@ jobs:
           cd $GITHUB_WORKSPACE/app
           DeclaredRelease=$(sed -n 's/^## Release //p' ReleaseNotes.md | head -n 1)
           echo "Declared release local file:$DeclaredRelease"
+          if [$DeclaredRelease == $ReleaseTag]; then 
+            echo “File ReleaseNotes.md missing new changes. Please add new wersion and release notes into this file”
+            exit 1; 
+          fi
           
-
 
       # - name: Build docker image
       #   run: |
