--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,14 +61,14 @@ jobs:
           ReleaseTag=$(curl https://api.github.com/repos/$Organization/$Project/releases/latest -s | jq .tag_name -r | tr -d '[:space:]')
           echo "Detected release tag in github:\"$ReleaseTag\""
           cd $GITHUB_WORKSPACE/app
-          if [! -f "$ReleaseNotesFile" ]; then 
-            echo “Unable to find file AllowedWidgetsList.txt”
+          if [ ! -f "$ReleaseNotesFile" ]; then 
+            echo "Unable to find file \"$ReleaseNotesFile\""
             exit 1; 
           fi
           DeclaredRelease=$(sed -n 's/^## Release //p' $ReleaseNotesFile | head -n 1 | tr -d '[:space:]')
           echo "Declared release in the local file:\"$DeclaredRelease\""
           if [ "$ReleaseTag" == "$DeclaredRelease" ]; then
-            echo "There are no new changes in the file \"ReleaseNotes.md\". Please add new version and release notes into this file before make a merge request."
+            echo "There are no new changes in the file \"$ReleaseNotesFile\". Please add new version and release notes into this file before make a merge request."
             exit 1; 
           fi
 
@@ -99,7 +99,7 @@ jobs:
       #           do sleep 5; done' \
       #       || true
       #     if ! cat $GITHUB_WORKSPACE/out/test_results.json | jq ".Result" | grep "_3_Success" ; then
-      #       echo “Failed to execute tests”
+      #       echo "Failed to execute tests"
       #       exit 1
       #     fi
 
@@ -122,8 +122,8 @@ jobs:
       #       TARGET_MPK="$GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk"
       #       ALLOWED_LIST="$GITHUB_WORKSPACE/app/.github/workflows/AllowedWidgetsList.txt"
 
-      #       if [! -f "$ALLOWED_LIST" ]; then 
-      #         echo “Unable to find file AllowedWidgetsList.txt”
+      #       if [ ! -f "$ALLOWED_LIST" ]; then 
+      #         echo "Unable to find file AllowedWidgetsList.txt"
       #         exit 1; 
       #       fi
 
