--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
           fi
           StartLine="## Release $DeclaredRelease"
           EndLine="_______"
-          ReleseNotes=$(cat $ReleaseNotesFile | awk "/$StartLine/,/$EndLine/" $ReleaseNotesFile | sed 1d | sed '$ d')
+          ReleseNotes=$(cat $ReleaseNotesFile | awk "/$StartLine/,/$EndLine/" | sed 1d | sed '$ d')
           echo $ReleseNotes
 
       # - name: Build docker image
