--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,10 +85,18 @@ jobs:
           tag_name: ${{env.NEW_RELEASE_VERSION}}
           release_name: Release ${{env.NEW_RELEASE_VERSION}}
           body: ${{env.NEW_RELEASE_NOTES}}
-          body_path: $GITHUB_WORKSPACE/app/Releases/WorkflowCommons-Latest.mpk
           draft: false
           prerelease: false
 
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./Releases/WorkflowCommons-Latest.mpk
+          asset_name: WorkflowCommons-Latest1.mpk
+          asset_content_type: application/zip
 
       # - name: Build docker image
       #   run: |
