--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./Releases/${{env.NEW_RELEASE_BIN_FILE}}
+          asset_path: ./app/Releases/${{env.NEW_RELEASE_BIN_FILE}}
           asset_name: ${{env.NEW_RELEASE_BIN_FILE}}
           asset_content_type: application/zip
 
